--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
